[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Characters/Dummy.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Weapon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/stateProcess.gd" type="Script" id=4]
[ext_resource path="res://Scenes/idle.gd" type="Script" id=5]
[ext_resource path="res://Scenes/move.gd" type="Script" id=6]
[ext_resource path="res://Scenes/load.gd" type="Script" id=7]
[ext_resource path="res://addons/goap/goap_action_planner.gd" type="Script" id=8]
[ext_resource path="res://addons/goap/goap_action.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Timer.gd" type="Script" id=10]
[ext_resource path="res://Scenes/ChangeDirection.gd" type="Script" id=11]
[ext_resource path="res://Scenes/StunTimer.gd" type="Script" id=12]

[sub_resource type="Animation" id=1]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 91.7 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "stunned"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ), Vector2( -1, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.3, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -13.0, -17.0, 13.0, 17.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1, -3 ), Vector2( -1, 0 ), Vector2( 1, -3 ), Vector2( 1, 0 ) ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 3.66037

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AnimHandler" type="AnimationPlayer" parent="sprite"]
anims/dead = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/stunned = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="Weapon" parent="sprite" instance=ExtResource( 3 )]

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5.68494 )
shape = SubResource( 5 )

[node name="stateProcess" type="Node" parent="."]
script = ExtResource( 4 )

[node name="idle" type="Node" parent="stateProcess"]
script = ExtResource( 5 )

[node name="move" type="Node" parent="stateProcess"]
script = ExtResource( 6 )

[node name="load" type="Node" parent="stateProcess"]
script = ExtResource( 7 )

[node name="GOAPActionPlanner" type="Node" parent="."]
script = ExtResource( 8 )

[node name="walk_to" type="Node" parent="GOAPActionPlanner"]
script = ExtResource( 9 )
action = "GOAPAction"
preconditions = "has_target"
effect = "in_range"

[node name="find_target" type="Node" parent="GOAPActionPlanner"]
script = ExtResource( 9 )
action = "GOAPAction"
effect = "has_target"

[node name="idle" type="Node" parent="GOAPActionPlanner"]
script = ExtResource( 9 )
action = "GOAPAction"
effect = "idle"

[node name="melee_attack" type="Node" parent="GOAPActionPlanner"]
script = ExtResource( 9 )
action = "GOAPAction"
preconditions = "has_target in_range"
effect = "kill_target"

[node name="bow_attack" type="Node" parent="GOAPActionPlanner"]
script = ExtResource( 9 )
action = "bow_attack"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01
script = ExtResource( 10 )

[node name="ChangeDirection" type="Timer" parent="."]
autostart = true
script = ExtResource( 11 )

[node name="StunTimer" type="Timer" parent="."]
one_shot = true
script = ExtResource( 12 )
[connection signal="timeout" from="ChangeDirection" to="." method="_on_ChangeDirection_timeout"]
[connection signal="timeout" from="ChangeDirection" to="ChangeDirection" method="_on_ChangeDirection_timeout"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
